Fixed overflow issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -147,7 +147,7 @@ nav.mainNavigation {
                 position: absolute;
                 top: 100px;
                 left: 120px;
-                min-width: 460px;
+                width: 460px;
             }
 
             span:nth-of-type(2) {
